Just messin around

--- a/Robot Invasion 2.0/Packages/manifest.json
+++ b/Robot Invasion 2.0/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.elbrens.elbrens-tools": "file:E:/Unity Packages/Tools/_Elbren's ToolMenu",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
