--- a/Robot Invasion 2.0/Packages/manifest.json
+++ b/Robot Invasion 2.0/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.postprocessing": "3.4.0",
+    "com.unity.shadergraph": "14.0.11",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
