--- a/Robot Invasion 2.0/Packages/manifest.json
+++ b/Robot Invasion 2.0/Packages/manifest.json
@@ -14,6 +14,7 @@
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.shadergraph": "17.0.3",
     "com.unity.test-framework": "1.4.5",
+    "com.unity.toolchain.macos-arm64-linux-x86_64": "2.0.4",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualeffectgraph": "17.0.3",
